修改user-info api,使用原生net/http实现
